List z-index and shadow fixes

--- a/assets/css/site/contexts/_neighborhoods.scss
+++ b/assets/css/site/contexts/_neighborhoods.scss
@@ -22,6 +22,7 @@
     .image-wrapper {
       @include imageFill();
       position: absolute;
+      z-index: 0;
     }
 
     .content-block {
